--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "chatgpt-api",
   "version": "0.0.0",
-  "devDependencies": {
-    "wrangler": "2.10.0"
-  },
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "wrangler dev",
-    "deploy": "wrangler publish"
+    "start": "node src/index.js"
   },
   "dependencies": {
-    "moment": "^2.29.4"
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mongodb": "^5.1.0",
+    "node-fetch": "^3.3.0"
   }
 }
